--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,14 +15,18 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: install ssh keys
-      # check this thread to understand why its needed:
-      # https://stackoverflow.com/a/70447517
-      run: |
-        mkdir -p "~/.ssh"
-        chmod 0700 "~/.ssh"
-        echo "${{ secrets.DO_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
+    - name: create .ssh folder
+      run: mkdir -p "~/.ssh"
+
+    - name: change chmod
+      run: chmod 0700 "~/.ssh"
+
+    - name: create file
+      run: echo "${{ secrets.DO_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+
+    - name: add host to known hosts
+      run: ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
+
     - name: connect and pull
       run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && git checkout ${{ secrets.MAIN_BRANCH }} && git pull && exit"
 
