--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,10 +22,10 @@ jobs:
       run: chmod 0700 "~/.ssh"
 
     - name: create file
-      run: echo "${{ secrets.DO_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+      run: echo "ola" > ~/.ssh/id_rsa
 
     - name: add host to known hosts
-      run: ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
+      run: ssh-keyscan -H "${{ secrets.SSH_HOST }}" > ~/.ssh/known_hosts
 
     - name: connect and pull
       run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && git checkout ${{ secrets.MAIN_BRANCH }} && git pull && exit"
