--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,4 +23,4 @@ jobs:
         key: ${{ secrets.DO_PRIVATE_KEY }}
         passphrase: ${{ secrets.DO_PASSPHRASE }}
         port: 22
-        script: whoami
+        script: cd ${{ secrets.WORK_DIR }} && git checkout ${{ secrets.MAIN_BRANCH }} && git pull && sudo systemctl restart gunicorn
