--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,4 +23,8 @@ jobs:
         key: ${{ secrets.DO_PRIVATE_KEY }}
         passphrase: ${{ secrets.DO_PASSPHRASE }}
         port: 22
-        script: cd ${{ secrets.WORK_DIR }} && git checkout ${{ secrets.MAIN_BRANCH }} && git pull && python3 manage.py collectstatic && sudo systemctl restart gunicorn
+        script: cd ${{ secrets.WORK_DIR }} && \
+        git checkout ${{ secrets.MAIN_BRANCH }} && \
+        git pull && \ 
+        echo yes | python manage.py collectstatic && \ 
+        sudo systemctl restart gunicorn
