--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,8 +23,9 @@ jobs:
         key: ${{ secrets.DO_PRIVATE_KEY }}
         passphrase: ${{ secrets.DO_PASSPHRASE }}
         port: 22
-        script: cd ${{ secrets.WORK_DIR }} && \
-        git checkout ${{ secrets.MAIN_BRANCH }} && \
-        git pull && \ 
-        echo yes | python manage.py collectstatic && \ 
-        sudo systemctl restart gunicorn
+        script: |
+          cd ${{ secrets.WORK_DIR }} && \
+          git checkout ${{ secrets.MAIN_BRANCH }} && \
+          git pull && \ 
+          echo yes | python manage.py collectstatic && \ 
+          sudo systemctl restart gunicorn
